// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<div
  data-test-id="foo"
>
  <Translate
    className="css-160c5eh "
    params={
      Array [
        null,
      ]
    }
    role={null}
    string="foo"
    transform={null}
  />
</div>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<div
  data-test-id="SAVE {0}%"
>
  <Translate
    className="css-160c5eh "
    params={
      Array [
        20,
      ]
    }
    role={null}
    string="SAVE {0}%"
    transform={null}
  />
</div>
`;
